--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,22 @@ body {
   overflow-x: hidden;
 }
 
+body::-webkit-scrollbar {
+  width: 1vw;
+  border-radius: 1vw;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  width: 1vw;
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: var(--sh-blue);
+  outline: 1px solid var(--sh-blue);
+  border-radius: 1vw;
+}
+
 a {
   text-decoration: none;
   color: var(--sh-white);
