--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -40,13 +40,13 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: 1vw;
+  width: 7px;
   border-radius: 1vw;
 }
  
 body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  width: 1vw;
+  width: 7px;
 }
  
 body::-webkit-scrollbar-thumb {
